src/workspace/snapshots/protols__workspace__definition__test__workspace_test_definition-2.snap
---
source: src/workspace/definition.rs
expression: "state.definition(\"com.library\", \"Author.Address\")"
---
- uri: "file://input/b.proto"
  range:
    start:
      line: 9
      character: 11
    end:
      line: 9
      character: 18
