src/workspace/snapshots/protols__workspace__definition__test__workspace_test_definition-5.snap
---
source: src/workspace/definition.rs
expression: "state.definition(&vec![std::env::current_dir().unwrap().join(&ipath[0])],\n\"com.workspace\", Jumpable::Import(\"c.proto\".to_owned())).len()"
snapshot_kind: text
---
1
