src/workspace/snapshots/protols__workspace__definition__test__workspace_test_definition.snap
---
source: src/workspace/definition.rs
expression: "state.definition(\"com.library\", \"Author\")"
---
- uri: "file://input/b.proto"
  range:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
